--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title:          Eyowo
 shortname:      eyowo
 description:  >-
   Eyowo is the simplest way to send or recieve money online or offline.
-url:            'https://eyowo.com'
+url:            'http://eyowo.surge.sh'
 charset:        'UTF-8'
 timezone:       Africa/Lagos
 typekit_id:     lbi1rxk
